The universal styling for planets.css has made it to where the nav bar was unclickable [overlapping boxes] so fixed that and made minor edits to ensure stuff is clean

--- a/assets/styles/planets.css
+++ b/assets/styles/planets.css
@@ -1,32 +1,27 @@
-body {
-    margin:0;
-    height: 100%;
-}
-.planetDataContainer{
-    border: 2px solid green;
-    margin-top: 10%;
-    display: inline-block;
-}
+
 .planetDataContainer p {
-    display: inline;
+    display: flex;
     justify-content: space-between;
-    padding: 10%;
+    border: 2px solid orange;
 }
+
 .planetText{
     width:30%;
     padding:10% 5% 10% 5%;
     border-radius: 5px;
     /*should help when resizing + avoid clips ??*/
     overflow: auto;
+    border: 2px solid purple;
 }
+
 .planetContainer{
-    min-width: 100%;
+    width: 100%;
+    height: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /*Space inbetween hero and nasaExplore*/
-    height: 80%;
-    border: rgba(37,37,37,37) 2px solid
+    border: 2px solid black;
 }
 
 /*the use of position relative and absolute LETS me overlap items
@@ -68,3 +63,24 @@ This also lets the model expand without covering buttons!
 #next {
     border:2px solid red;
 }
+
+
+
+/*Makes sure whole screen is covered including margin:0, it defaults to 8x i think*/
+/*https://medium.com/@patrickdunn_15451/beware-default-html-margins-6159ae7a8b3e talks about it here*/
+body,html {
+    margin: 0;
+    /*Makes jumping around page smoother, not actual user scrolling on site*/
+    scroll-behavior: smooth;
+}
+
+p {
+    font-family: 'Jost', sans-serif;
+
+}
+
+h1, h4 {
+    font-family: 'Manrope', sans-serif;
+}
+
+/*#endregion univStyling*/
